# api/models/questions.js
@@ -1,0 +1,94 @@
+export const surveyQuestions = () => {
+  return {
+    q_cleanCookingBenefits: {
+      docType: ['pre', 'post'],
+      question: 'What are the benefits of cooking with clean stove'
+    },
+    q_percentageCharcoalFireword: {
+      docType: ['post'],
+      question: 'What % of Moz households rely on charchoal and firewood?'
+    },
+    q_safeCharcoalIndoors: {
+      docType: ['pre', 'post'],
+      question: 'How safe is it to burn wood or charcoal indoors?'
+    },
+    q_opinionUseCookStoves: {
+      docType: ['post'],
+      questions: 'In your opinion, what is the best reason to use improved cookstoves?'
+    },
+    q_wherePurchaseStove: {
+      docType: ['pre', 'post'],
+      question: 'Do you know where you can purchase an improved cookstove near your home?'
+    },
+    q_interestedPurchaseStove: {
+      doctType: ['pre', 'post'],
+      question: 'Are you interested to puchase an improved cookstove?'
+    },
+    q_whyNotPurchaseStove: {
+      docType: ['pre', 'post'],
+      question: 'Why not purchase cookstove?'
+    },
+    q_enjoyPresentation: {
+      docType: ['post'],
+      question: 'Did you enjoy the presentation?'
+    },
+    q_whatEnjoyPresentation: {
+      docType: ['post'],
+      question: 'What did you enjoy most?'
+    },
+    q_previousLearnPresentation: {
+      docType: ['post'],
+      question: 'Have you previously learned about any of the topics in tonight\'s presentation?'
+    },
+    q_whereLearnPreviousPresentation: {
+      docType: ['post'],
+      question: 'Where did you learned previous on the topic tonight?'
+    },
+    q_howOftenAttendMobileMovies: {
+      docType: ['post'],
+      question: 'How often would you like to attend Mobile Movies presentations'
+    },
+    q_whatMostExpensiveThingOwns: {
+      docType: ['pre'],
+      question: 'What is the most expensive thing your family owns?'
+    },
+    q_friendsOwnStoves: {
+      docType: ['pre'],
+      question: 'Do you friends own clean cookstoves?'
+    },
+    q_howMuchCookingSpent: {
+      docType: ['pre'],
+      question: 'How much money does your family spend on cooking fuel/week?'
+    },
+    q_whereCookingFuel: {
+      docType: ['pre'],
+      question: 'Where do you find fuel for cooking?'
+    },
+    q_numberOfStoves: {
+      docType: ['pre'],
+      question: 'How many stoves does your family own?'
+    },
+    q_stoveType: {
+      docType: ['pre'],
+      question: 'Type of stove used?'
+    },
+    q_whoLongToCook: {
+      docType: ['pre'],
+      question: 'How long does it take to cook/day?'
+    },
+    q_whereCook: {
+      docType: ['pre'],
+      question: 'Where does your family cook?'
+    },
+    q_howOftenCook: {
+      docType: ['pre'],
+      question: 'How often does your family cook meals?'
+    },
+    q_whoCooks: {
+      docType: ['pre'],
+      question: 'Who cooks in your household?'
+    }
+
+  }
+
+};
